--- a/app/ios/Pathify/Base.lproj/LaunchScreen.xib
+++ b/app/ios/Pathify/Base.lproj/LaunchScreen.xib
@@ -15,14 +15,23 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Loading" translatesAutoresizingMaskIntoConstraints="NO" id="Xqf-jG-k8t">
-                    <rect key="frame" x="-118" y="96" width="618" height="504"/>
+                    <rect key="frame" x="-102" y="211" width="618" height="504"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="618" id="8Ch-7k-9dN"/>
+                        <constraint firstAttribute="height" constant="504" id="NZO-PX-9i1"/>
+                        <constraint firstAttribute="width" secondItem="Xqf-jG-k8t" secondAttribute="height" multiplier="103:84" id="cBI-ed-NHW"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.12156862745098039" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstItem="Xqf-jG-k8t" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="D9B-wG-WSv"/>
                 <constraint firstItem="Xqf-jG-k8t" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="KjQ-SK-41Q"/>
+                <constraint firstItem="Xqf-jG-k8t" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mqr-ww-fLp"/>
                 <constraint firstItem="Xqf-jG-k8t" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="bvD-Q3-usD"/>
+                <constraint firstItem="Xqf-jG-k8t" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="eEe-TY-0Qf"/>
+                <constraint firstItem="Xqf-jG-k8t" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="k3b-JQ-4Ia"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <point key="canvasLocation" x="531.8840579710145" y="606.52173913043487"/>
