New LaunchScreen.storyboard. Cleaned up Podfile. Removed LaunchScreen.xib.

--- a/app/ios/Pathify/Base.lproj/LaunchScreen.xib
+++ b/app/ios/Pathify/Base.lproj/LaunchScreen.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -37,6 +37,6 @@
         </view>
     </objects>
     <resources>
-        <image name="Loading" width="2048" height="2048"/>
+        <image name="Loading" width="1365.3333740234375" height="1365.3333740234375"/>
     </resources>
 </document>
